// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zod v3 > basic 1`] = `
{
  "components": undefined,
  "schema": {
    "description": "My neat object schema",
    "properties": {
      "myString": {
        "type": "string",
      },
      "myUnion": {
        "anyOf": [
          {
            "type": "number",
          },
          {
            "type": "boolean",
          },
        ],
      },
    },
    "required": [
      "myString",
      "myUnion",
    ],
    "type": "object",
  },
}
`;

exports[`zod v3 > with metadata 1`] = `
{
  "components": {
    "schemas": {
      "MyNeatObjectSchema": {
        "description": "My neat object schema",
        "properties": {
          "myString": {
            "type": "string",
          },
          "myUnion": {
            "anyOf": [
              {
                "type": "number",
              },
              {
                "type": "boolean",
              },
            ],
          },
        },
        "required": [
          "myString",
          "myUnion",
        ],
        "type": "object",
      },
    },
  },
  "schema": {
    "$ref": "#/components/schemas/MyNeatObjectSchema",
  },
}
`;
